--- a/src/styles/message.scss
+++ b/src/styles/message.scss
@@ -25,6 +25,8 @@
   background-position: center;
   min-width: 30px;
   min-height: 30px;
+  max-width: 30px;
+  max-height: 30px;
   border-radius: 50%;
   align-self: center;
   margin-right: 15px;
@@ -32,7 +34,7 @@
 
 .sc-message--text {
   padding: 17px 20px;
-  border-radius: 6px;
+  border-radius: 27.5px;
   font-weight: 300;
   font-size: 14px;
   line-height: 1.4;
@@ -77,9 +79,9 @@
   color: rgba(86, 88, 103, 0.6);
 }
 
-.sc-message--file .sc-user-input--file-icon:hover path {
-  fill: rgba(86, 88, 103, 0.3);
-}
+// .sc-message--file .sc-user-input--file-icon:hover path {
+//   fill: rgba(86, 88, 103, 0.3);
+// }
 
 @media (max-width: 450px) {
   .sc-message {
