--- a/src/styles/user-input.scss
+++ b/src/styles/user-input.scss
@@ -12,13 +12,13 @@
 
 
 .sc-user-input--text {
-  width: 300px;
+  width: 330px;
   resize: none;
   border: none;
   outline: none;
   border-bottom-left-radius: 10px;
   box-sizing: border-box;
-  padding: 18px;
+  padding: 18px 18px 18px 56px;
   font-size: 15px;
   font-weight: 400;
   line-height: 1.33;
@@ -41,7 +41,7 @@
 }
 
 .sc-user-input--buttons {
-  width: 100px;
+  width: 30px;
   position: absolute;
   right: 10px;
   height: 100%;
