--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,12 +2,15 @@ $lightFont:#54545e;
 $lighterFont:#7d7d7d;
 $lightestFont:#c1c1c1;
 
+$threeBoxBlack: #181F21;
+$threeBoxBlackHover: rgb(47, 56, 58);
+
 $maxCommentWidth: 600px;
 $minCommentWidth: 300px;
 
 $minCommentWidth-mobile: 260px;
 
-$commentPictureDimension: 36px;
+$commentPictureDimension: 42px;
 
 $commentPictureDimension-mobile: 50px;
 
