--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -2,18 +2,18 @@
 
 footer {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  margin-bottom: 80px;
 }
 
 .footer_text {
   color: $lightestFont;
-  font-weight: 600;
+  font-weight: 400;
   font-size: 13px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  opacity: .3;
 
   a {
     display: flex;
@@ -25,5 +25,5 @@ footer {
 .footer_text_image {
   height: 18px;
   margin-left: 8px;
-  opacity: .3;
+  opacity: .8;
 }
