--- a/src/styles/chat-window.scss
+++ b/src/styles/chat-window.scss
@@ -1,3 +1,5 @@
+@import './variables.scss';
+
 .sc-chat-window {
   width: 370px;
   height: calc(100% - 120px);
@@ -13,7 +15,7 @@
   justify-content: space-between;
   transition: 0.3s ease-in-out;
   border-radius: 10px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  // font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .sc-chat-window.closed {
@@ -33,8 +35,72 @@
 .sc-message--me {
   text-align: right;
 }
+
 .sc-message--them {
   text-align: left;
+}
+
+
+.joinThreadWindow {
+  width: 370px;
+  height: calc(30% - 120px);
+  max-height: 590px;
+  position: fixed;
+  right: 25px;
+  bottom: 100px;
+  box-sizing: border-box;
+  box-shadow: 0px 7px 40px 2px rgba(148, 149, 150, 0.3);
+  background-color: $threeBoxBlack;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transition: 0.3s ease-in-out;
+  border-radius: 10px;
+
+  &:hover {
+    background-color: $threeBoxBlackHover;
+  }
+}
+
+.joinThreadWindow.closed {
+  opacity: 0;
+  visibility: hidden;
+  bottom: 90px;
+}
+
+.joinThreadWindow_wrapper {
+  padding: 20px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  cursor: pointer;
+
+  h3 {
+    color: white;
+    margin: 0;
+  }
+
+  p {
+    margin: 0;
+    color: white;
+    font-size: 13px;
+    opacity: .6;
+  }
+}
+
+.joinThreadWindow_wrapper_header {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+
+  // button {
+  //   background-color: #1168df;
+  //   padding: 16px 20px;
+  //   border-radius: 6px;
+  // }
 }
 
 @media (max-width: 450px) {
@@ -46,9 +112,11 @@
     bottom: 0px;
     border-radius: 0px;
   }
+
   .sc-chat-window {
     transition: 0.1s ease-in-out;
   }
+
   .sc-chat-window.closed {
     bottom: 0px;
   }
