--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,11 +1,13 @@
+@import './variables.scss';
+
 .sc-header {
-  background: #4e8cff;
+  background: $threeBoxBlack;
   min-height: 60px;
   border-top-left-radius: 9px;
   border-top-right-radius: 9px;
   color: white;
   padding: 10px;
-  box-shadow: 0 1px 4px rgba(0,0,0,.2);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, .2);
   position: relative;
   box-sizing: border-box;
   display: flex;
@@ -17,12 +19,20 @@
   padding: 0 6px;
 }
 
+.sc-header--img.ghost {
+  font-size: 30px;
+  margin: 0;
+}
+
 .sc-header--team-name {
   align-self: center;
-  padding: 10px;
+  padding: 10px 8px;
   flex: 1;
   user-select: none;
   border-radius: 5px;
+  font-weight: 800;
+  font-size: 18px;
+  letter-spacing: .3px;
 }
 
 .sc-header--close-button {
