--- a/src/styles/message.scss
+++ b/src/styles/message.scss
@@ -1,3 +1,5 @@
+@import './variables.scss';
+
 .sc-message {
   width: 340px;
   margin: auto;
@@ -35,8 +37,8 @@
 .sc-message--text {
   padding: 12px 16px;
   border-radius: 27.5px;
-  font-weight: 300;
-  font-size: 14px;
+  font-weight: 400;
+  font-size: 15px;
   line-height: 1.4;
   white-space: pre-wrap;
   -webkit-font-smoothing: subpixel-antialiased;
@@ -46,7 +48,8 @@
 
 .sc-message--content.sent .sc-message--text {
   color: white;
-  background-color: #4e8cff;
+  background-color: $threeBoxBlack;
+  // background-color: #4e8cff;
   max-width: calc(100% - 120px);
   word-wrap: break-word;
 }
