--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,6 +2,8 @@ $lightFont:#54545e;
 $lighterFont:#7d7d7d;
 $lightestFont:#c1c1c1;
 
+$windowBorderRadius: 20px;
+
 $threeBoxBlack: #181F21;
 $threeBoxBlackHover: rgb(47, 56, 58);
 
