--- a/src/styles/chat-window.scss
+++ b/src/styles/chat-window.scss
@@ -1,27 +1,35 @@
 @import './variables.scss';
 
+.chat, .popupChat {
+  height: 100%;
+  width: 100%;
+  position: relative;
+} 
+
 .sc-chat-window {
-  width: 370px;
+  width: 376px;
   height: calc(100% - 120px);
   max-height: 590px;
-  position: fixed;
-  right: 25px;
-  bottom: 100px;
   box-sizing: border-box;
-  box-shadow: 0px 7px 40px 2px rgba(148, 149, 150, 0.3);
   background: white;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   transition: 0.3s ease-in-out;
-  border-radius: 10px;
-  // font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  border-radius: $windowBorderRadius;
+}
+
+.popupChat .sc-chat-window {
+  box-shadow: 0px 7px 40px 2px rgba(148, 149, 150, 0.3);
+  position: fixed;
+  right: 25px;
+  bottom: 100px;
 }
 
 .sc-chat-window.closed {
   opacity: 0;
   visibility: hidden;
-  bottom: 90px;
+  // bottom: 90px;
 }
 
 .sc-message-list {
@@ -42,30 +50,43 @@
 
 
 .joinThreadWindow {
-  width: 370px;
-  height: calc(30% - 120px);
+  width: 376px;
+  height: calc(100% - 120px);
   max-height: 590px;
-  position: fixed;
-  right: 25px;
-  bottom: 100px;
   box-sizing: border-box;
-  box-shadow: 0px 7px 40px 2px rgba(148, 149, 150, 0.3);
   background-color: $threeBoxBlack;
-  display: flex;
   flex-direction: column;
   justify-content: space-between;
   transition: 0.3s ease-in-out;
-  border-radius: 10px;
+  border-radius: $windowBorderRadius;
 
   &:hover {
     background-color: $threeBoxBlackHover;
   }
 }
 
+.popupChat.joinThreadWindow {
+  box-shadow: 0px 7px 40px 2px rgba(148, 149, 150, 0.3);
+  position: fixed;
+  right: 25px;
+  bottom: 100px;
+}
+
+.chat .joinThreadWindow {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.joinThreadWindow.opened {
+  display: flex;
+  opacity: 1;
+}
+
 .joinThreadWindow.closed {
   opacity: 0;
   visibility: hidden;
-  bottom: 90px;
+  // bottom: 90px;
 }
 
 .joinThreadWindow_wrapper {
@@ -75,12 +96,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
-  cursor: pointer;
-
-  h3 {
-    color: white;
-    margin: 0;
-  }
+  position: relative;
 
   p {
     margin: 0;
@@ -90,17 +106,42 @@
   }
 }
 
+.joinThreadWindow_wrapper_header_title {
+  color: white;
+  margin: 0;
+  font-size: 22px;
+  letter-spacing: .5px;
+}
+
 .joinThreadWindow_wrapper_header {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
+}
 
-  // button {
-  //   background-color: #1168df;
-  //   padding: 16px 20px;
-  //   border-radius: 6px;
-  // }
+.joinThreadWindow_wrapper_button {
+  background-color: #1168df;
+  padding: 10px 20px;
+  border-radius: 25px;
+  font-size: 16px;
+  font-weight: 700;
+  color: white;
+  border: none;
+  letter-spacing: .5px;
+  box-sizing: border-box;
+  height: 40px;
+  cursor: pointer;
+}
+
+.thread_loading {
+  min-width: 30px;
+  min-height: 30px;
+  max-width: 30px;
+  max-height: 30px;
+  // position: absolute;
+  // right: -36px;
+  // top: -4px;
 }
 
 @media (max-width: 450px) {
