--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -3,8 +3,8 @@
 .sc-header {
   background: $threeBoxBlack;
   min-height: 60px;
-  border-top-left-radius: 9px;
-  border-top-right-radius: 9px;
+  border-top-left-radius: $windowBorderRadius;
+  border-top-right-radius: $windowBorderRadius;
   color: white;
   padding: 10px;
   box-shadow: 0 1px 4px rgba(0, 0, 0, .2);
