joinChat styling etc

--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -7,7 +7,7 @@ footer {
 }
 
 .footer_text {
-  color: $lightestFont;
+  // color: $lightestFont;
   font-weight: 400;
   font-size: 13px;
   display: flex;
