--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,7 +2,7 @@ $lightFont:#54545e;
 $lighterFont:#7d7d7d;
 $lightestFont:#c1c1c1;
 
-$windowBorderRadius: 20px;
+$windowBorderRadius: 14px;
 
 $threeBoxBlack: #181F21;
 $threeBoxBlackHover: rgb(47, 56, 58);
@@ -16,4 +16,4 @@ $commentPictureDimension: 42px;
 
 $commentPictureDimension-mobile: 50px;
 
-$borderColor:#dadada;
+$borderColor:#e8e8e8;
