--- a/src/styles/message.scss
+++ b/src/styles/message.scss
@@ -3,14 +3,14 @@
 .sc-message {
   width: 350px;
   margin: auto;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
   display: flex;
 
-  &:hover {
-    .sc-message_timestamp{
-      opacity: 1;
-    }
-  }
+  // &:hover {
+  //   .sc-message_timestamp{
+  //     opacity: 1;
+  //   }
+  // }
 }
 
 .sc-message--content {
@@ -55,7 +55,7 @@
 
 .sc-message--content.sent .sc-message--text {
   color: white;
-  background-color: $threeBoxBlack;
+  // background-color: $threeBoxBlack;
   // background-color: #4e8cff;
   max-width: calc(100% - 120px);
   word-wrap: break-word;
@@ -75,23 +75,36 @@
   left: 67px;
 }
 
-.sc-message_timestamp {
-  position: absolute;
-  font-size: 13px;
-  color: $lighterFont;
-  bottom: -32px;
-  opacity: 0;
-  transition: .2s ease-in-out all;
-  margin: 0;
+.sc-message_group {
+  position: relative;
+  margin-bottom: 34px;
 }
 
-.received .sc-message_timestamp {
-  left: 66px;
+.myGroup.sc-message_group {
+  margin-top: -20px;
 }
 
-.sent .sc-message_timestamp {
-  right: 0;
+.sc-message_spacer {
+  min-width: 52px;
 }
+
+// .sc-message_timestamp {
+//   position: absolute;
+//   font-size: 13px;
+//   color: $lighterFont;
+//   bottom: -20px;
+//   opacity: 0;
+//   transition: .2s ease-in-out all;
+//   margin: 0;
+// }
+
+// .received .sc-message_timestamp {
+//   left: 66px;
+// }
+
+// .sent .sc-message_timestamp {
+//   right: 0;
+// }
 
 .sc-message--emoji {
   font-size: 40px;
