--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -12,7 +12,7 @@
   position: relative;
   box-sizing: border-box;
   display: flex;
-  border-bottom: 1px solid $borderColor;
+  // border-bottom: 1px solid $borderColor;
 }
 
 .sc-header--img {
