--- a/src/styles/chat-window.scss
+++ b/src/styles/chat-window.scss
@@ -76,6 +76,7 @@
   top: 0;
   left: 0;
   border: 1px solid $borderColor;
+  height: 100% !important;
 }
 
 .joinThreadWindow.opened {
@@ -206,13 +207,35 @@
 }
 
 @media (max-width: 450px) {
-  .sc-chat-window {
+  .chat .sc-chat-window {
     width: 100%;
     height: 100%;
     max-height: 100%;
     right: 0px;
     bottom: 0px;
+  }
+
+  .popupChat .sc-chat-window {
+    width: 100vw;
+    height: 100vh;
+    max-height: 100vh;
+    right: 0px;
+    bottom: 0px;
     border-radius: 0px;
+    border: none;
+  }
+
+  .popupChat .sc-chat-window {
+    box-shadow: none;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+  }
+  
+  .sc-chat-window.closed {
+    opacity: 0;
+    visibility: hidden;
+    bottom: 0;
   }
 
   .sc-chat-window {
