change orbit version

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -41,7 +41,7 @@
   font-size: 18px;
   letter-spacing: .3px;
   color: white;
-  margin-right: 12px;
+  margin: 0 12px 0 0 ;
 }
 
 .sc-header_details {
