--- a/src/styles/chat-window.scss
+++ b/src/styles/chat-window.scss
@@ -18,8 +18,6 @@
   justify-content: space-between;
   transition: 0.3s ease-in-out;
   border-radius: $windowBorderRadius;
-
-  border: 1px solid $borderColor;
 }
 
 .popupChat .sc-chat-window {
@@ -27,6 +25,10 @@
   position: fixed;
   right: 25px;
   bottom: 100px;
+}
+
+.chat .sc-chat-window {
+  border: 1px solid $borderColor;
 }
 
 .sc-chat-window.closed {
