--- a/src/styles/user-input.scss
+++ b/src/styles/user-input.scss
@@ -106,6 +106,11 @@
   fill: rgba(86, 88, 103, 1);
 }
 
+// .sc-user-input--file-icon:hover path,
+.hasText.sc-user-input--send-icon path {
+  fill: rgba(86, 88, 103, 1);
+}
+
 // .sc-user-input--file-icon-wrapper
 .sc-user-input--emoji-icon-wrapper,
 .sc-user-input--send-icon-wrapper {
@@ -145,4 +150,14 @@
 .sc-user-input--emoji-icon:hover path,
 .sc-user-input--emoji-icon:hover circle {
   fill: rgba(86, 88, 103, 1);
+}
+
+@media (max-width: 450px) {
+  .sc-user-input--text {
+    font-size: 16px;
+  }
+
+  .sc-user-input--text:empty:before {
+    font-size: 16px;
+  }
 }
