--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -63,24 +63,6 @@
   border-radius: 5px;
 }
 
-.joinThreadWindow_wrapper--close-button {
-  width: 40px;
-  height: 40px;
-  box-sizing: border-box;
-  cursor: pointer;
-  border-radius: 5px;
-  position: absolute;
-  top: 24px;
-  right: 24px;
-
-  img {
-    width: 100%;
-    height: 100%;
-    padding: 13px;
-    box-sizing: border-box;
-  }
-}
-
 .sc-header--close-button:hover {
   background-color: rgba(255, 255, 255, 0.153);
 }
@@ -92,7 +74,29 @@
   box-sizing: border-box;
 }
 
+.joinThreadWindow_wrapper--close-button {
+  display: none;
+}
+
 @media (max-width: 450px) {
+  .joinThreadWindow_wrapper--close-button {
+    width: 40px;
+    height: 40px;
+    box-sizing: border-box;
+    cursor: pointer;
+    border-radius: 5px;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+  
+    img {
+      width: 100%;
+      height: 100%;
+      padding: 13px;
+      box-sizing: border-box;
+    }
+  }
+
   .popupChat .sc-header {
     border-radius: 0px;
   }
