--- a/src/styles/message.scss
+++ b/src/styles/message.scss
@@ -3,7 +3,7 @@
 .sc-message {
   width: 350px;
   margin: auto;
-  padding-bottom: 10px;
+  padding-bottom: 6px;
   display: flex;
 }
 
@@ -55,7 +55,7 @@
 
 .sc-message--content.received .sc-message--text {
   color: #263238;
-  background-color: #f4f7f9;
+  background-color: #e4e4e4;
   margin-right: 40px;
 }
 
@@ -63,7 +63,7 @@
   position: absolute;
   font-size: 12px;
   color: $lighterFont;
-  top: -32px;
+  top: -22px;
   left: 67px;
 }
 
@@ -112,9 +112,5 @@
 @media (max-width: 450px) {
   .sc-message {
     width: 90%;
-  }
-
-  .sc-message_messager {
-    top: -22px;
   }
 }
