--- a/src/styles/chat-window.scss
+++ b/src/styles/chat-window.scss
@@ -43,6 +43,7 @@
   background-color: white;
   background-size: 100%;
   padding: 40px 0 0 0;
+  -webkit-overflow-scrolling: touch;
 }
 
 .sc-message--me {
