--- a/src/styles/user-input.scss
+++ b/src/styles/user-input.scss
@@ -22,19 +22,27 @@
   outline: none;
   border-bottom-left-radius: 10px;
   box-sizing: border-box;
-  padding: 18px 18px 18px 64px;
+  padding: 18px 18px 0 64px;
   font-size: 15px;
   font-weight: 400;
-  line-height: 1.83;
   white-space: pre-wrap;
   word-wrap: break-word;
   color: $threeBoxBlack;
   -webkit-font-smoothing: antialiased;
   max-height: 200px;
   overflow: scroll;
-  bottom: 0;
   overflow-x: hidden;
   overflow-y: auto;
+  vertical-align:middle;
+
+  line-height: 27px;
+}
+
+.sc-user-input--text:empty:before {
+  content: attr(placeholder);
+  display: block; /* For Firefox */
+  color: rgba(86, 88, 103, 0.3);
+  outline: none;
 }
 
 .sc-user-input--buttons {
