finicky mobile input

--- a/src/styles/user-input.scss
+++ b/src/styles/user-input.scss
@@ -22,7 +22,7 @@
   outline: none;
   border-bottom-left-radius: 10px;
   box-sizing: border-box;
-  padding: 18px 18px 0 64px;
+  padding: 18px 18px 18px 64px;
   font-size: 15px;
   font-weight: 400;
   white-space: pre-wrap;
