--- a/examples/index.scss
+++ b/examples/index.scss
@@ -14,6 +14,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  // flex-direction: column;
 }
 
 .userscontainer {
@@ -37,6 +38,10 @@
 
 @media only screen and (max-width: 768px) {
   .userscontainer {
+    width: 100%;
+  }
+
+  .example_page {
     width: 100%;
   }
 }
