--- a/src/styles/Comments.scss
+++ b/src/styles/Comments.scss
@@ -119,6 +119,16 @@
   word-break: break-word;
 }
 
+.comment_loading {
+  min-width: 30px;
+  min-height: 30px;
+  max-width: 30px;
+  max-height: 30px;
+  position: absolute;
+  right: -36px;
+  top: -4px;
+}
+
 @media only screen and (max-width: 768px) {
   .comment-mobile {
     .comment_picture {
