--- a/src/styles/chat-window.scss
+++ b/src/styles/chat-window.scss
@@ -28,7 +28,7 @@
 }
 
 .chat .sc-chat-window {
-  border: 1px solid $borderColor;
+  // border: 1px solid $borderColor;
 }
 
 .sc-chat-window.closed {
@@ -130,6 +130,12 @@
   align-items: center;
 }
 
+.joinThreadWindow_wrapper_buttonDiv_error {
+  font-weight: 400;
+  font-size: 18px;
+  opacity: .7;
+}
+
 .joinThreadWindow_wrapper_button {
   background-color: $threeBoxBlack;
   padding: 10px 20px;
@@ -189,8 +195,10 @@
 }
 
 .joinThreadWindow_wrapper_image {
-  height: 140px;
-  width: 140px;
+  min-height: 140px;
+  min-width: 140px;
+  max-height: 140px;
+  max-width: 140px;
   border-radius: 50%;
   display: flex;
   justify-content: center;
