--- a/src/styles/launcher.scss
+++ b/src/styles/launcher.scss
@@ -16,6 +16,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 
 .sc-launcher:before {
@@ -33,8 +34,6 @@
   width: 60px;
   height: 60px;
   position: fixed;
-  // right: 25px;
-  // bottom: 25px;
   transition: opacity 100ms ease-in-out, transform 100ms ease-in-out;
 }
 
