--- a/src/styles/message.scss
+++ b/src/styles/message.scss
@@ -31,16 +31,15 @@
   max-width: 30px;
   max-height: 30px;
   border-radius: 50%;
-  align-self: center;
   margin-right: 10px;
 }
 
 .sc-message--text {
-  padding: 12px 16px;
+  padding: 11px 16px;
   border-radius: 27.5px;
   font-weight: 400;
   font-size: 15px;
-  line-height: 1.4;
+  line-height: 20px;
   white-space: pre-wrap;
   -webkit-font-smoothing: subpixel-antialiased;
   word-wrap: break-word;
@@ -70,7 +69,7 @@
 .sc-message_avatarWrapper {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .sc-message_group {
