--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -79,7 +79,7 @@
   background-color: rgba(255, 255, 255, 0.153);
 }
 
-.sc-header--close-button img {
+.sc-header--close-button svg {
   width: 100%;
   height: 100%;
   padding: 13px;
