handle link color

--- a/src/styles/message.scss
+++ b/src/styles/message.scss
@@ -44,6 +44,10 @@
   -webkit-font-smoothing: subpixel-antialiased;
   word-wrap: break-word;
   width: fit-content;
+
+  a {
+    color: white;
+  }
 }
 
 .sc-message--content.sent .sc-message--text {
