max message width

--- a/src/styles/message.scss
+++ b/src/styles/message.scss
@@ -44,6 +44,7 @@
   -webkit-font-smoothing: subpixel-antialiased;
   word-wrap: break-word;
   width: fit-content;
+  max-width: 266px;
 
   a {
     color: #2690ff;
