--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -101,6 +101,8 @@
     top: 24px;
     right: 24px;
     display: flex;
+    justify-content: center;
+    align-items: center;
 
     img {
       width: 100%;
