--- a/src/styles/user-input.scss
+++ b/src/styles/user-input.scss
@@ -112,8 +112,8 @@
 .sc-user-input--send-icon-wrapper {
   background: none;
   border: none;
-  padding: 2px 2px 26px 2px;
-  margin: 0px;
+  padding: 2px 2px 2px 2px;
+  margin: 0 0 24px 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
