--- a/src/styles/message.scss
+++ b/src/styles/message.scss
@@ -81,6 +81,10 @@
   margin-bottom: 34px;
 }
 
+.messageList_loadingIcon {
+  width: 50px;
+}
+
 .myGroup.sc-message_group {
   margin-top: -20px;
 }
