--- a/src/styles/chat-window.scss
+++ b/src/styles/chat-window.scss
@@ -53,6 +53,12 @@
   display: inline;
 }
 
+.sc-message-list.isLoading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .onlineList {
   display: none;
   height: 80%;
